--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "plantas2323", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger101", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Dyskretne spotkania</title>
-<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
+<title>Discreet service</title>
+<meta content='https://i.postimg.cc/L6mxNw4n/Screenshot-912.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,34 +20,34 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="" alt="">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Nabízím své sexuální služby, tance a erotické masáže doma, chcete si prohlédnout můj katalog?.</div>
+I offer my sexual services, dances and erotic massages at your home, would you like to see my catalog?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Tak
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-NIE
+No
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-OSTRZEŻENIE! Czy zgadzasz się szanować kobiety, które zobaczysz w następnej kolejności? Jeśli kogoś znasz, nie mów mu i nie rozpowszechniaj plotek.</div>
+ATTENTION! Do you agree with the respect for the naked women you'll see below? If you know someone, don't tell them or spread rumours.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Plantas}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ZGADZAM SIĘ
+<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Strongeer}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">I'M GOING TO COME OUT
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4">
+<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
