--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ ATTENTION! Do you agree with the respect for the naked women you'll see below? I
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://shrlc.com/HBYiEUB" class="step-btn submit-btn tr-submit-button showmail">I'M GOING TO COME OUT
+<a href="https://shrlc.com/iUub36F" class="step-btn submit-btn tr-submit-button showmail">I'M GOING TO COME OUT
 </a>
 </div>
 </div>
