--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>My GALLERY HERE</title> 
-<meta content='https://i.postimg.cc/Dybrw48F/419727428-1797192054039641-3701058606530657091-n.jpg' property='og:image'/>
+<title>My photo catalog</title>
+<meta content='https://i.postimg.cc/KjzxqTLS/Screenshot-5.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,33 +20,35 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-I am a professional masseur, I come to your home by the hour. Do you want to see my catalog?.?.</div>
+We come to your home at night, service available throughout the city, would you like to see my catalog?
+</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-No
+Yes
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Yes
+No
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-Congratulations! You have been selected to meet a girl. To complete an appointment, you must register on our website, click "ENTER", fill out the free form, and enjoy vaginal sex, orgies, and much more... </div>
+WARNING! Do you agree to respect the women you see below? If you know someone, don't tell and don't spread rumors</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">I AGREE
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/286374/1706542129/images/3_new.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/275415/1665133459/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
