--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wauzya">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Discreet service</title>
-<meta content='https://i.postimg.cc/C5bKnWCx/Screenshot-947.png' property='og:image'/>
+<title>My Photo Catalog</title>
+<meta content='https://i.postimg.cc/KjzxqTLS/Screenshot-5.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -23,8 +23,9 @@
 <img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
-<div class="question-title ">
-I have my sexual experience, dancer and erotic masses of men, would you like to see my Catalog?</div>
+<div class="question-title">
+We come to your house at night, service available citywide, would you like to see my catalog?
+</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Yes
@@ -35,19 +36,19 @@ No
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
-<div class="question-title ">
-Congratulations! You have been selected to meet a girl, to complete an appointment you must register on our website, press "ENTER", fill out the free form and enjoy vaginal sex, orgies and much more...</div>
+<div class="question-title">
+ATTENTION! Do you agree to respect the women you will see below? If you know someone, do not say anything and do not spread rumors.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">I AGREE
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/275415/1665133459/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
